# BERT-cpp-inference

./: README.md  generate_bert.py  test_api.py
server-cpp/: CMakeLists.txt  bert-cpp  bert-server.cpp  bert_tests.cpp
server-cpp/libs/: crow_all.h  infer.cpp  infer.h
server-python/: app_jit.py  app_onnx.py  app_pt.py
